k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: NodePort
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 8080  
      targetPort: 8080
      nodePort: 30001
